spacing issues in team and donors

--- a/mediaComp.css
+++ b/mediaComp.css
@@ -410,6 +410,7 @@
     border-radius: 10px;
     width: 188px;
     height: 6px;
+    margin-right: 12px;
     margin-bottom: 10px;
   }
   #progressLabelTeam {
@@ -428,8 +429,8 @@
     margin-right: 58px;
   }
   #donorLabel2 {
-    margin-left: 33px;
-    margin-right: 47px;
+    margin-left: 38px;
+    margin-right: 52px;
   }
 
   #teamBtn {
@@ -476,7 +477,7 @@
   }
 
   #donorCountGoal {
-    margin-left: 43px;
+    margin-left: 37px;
   }
 
   #donorLabel {
@@ -484,8 +485,8 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
-    margin-left: 45px;
-    margin-right: 50px;
+    margin-left: 49px;
+    margin-right: 59px;
     color: #828282;
   }
 
