--- a/mediaLargeComp.css
+++ b/mediaLargeComp.css
@@ -414,6 +414,7 @@
     width: 188px;
     height: 6px;
     margin-bottom: 10px;
+    margin-right: 12px;
   }
   #progressLabelTeam {
     font-size: 16px;
@@ -431,8 +432,8 @@
     margin-right: 58px;
   }
   #donorLabel2 {
-    margin-left: 33px;
-    margin-right: 47px;
+    margin-left: 38px;
+    margin-right: 52px;
   }
 
   #teamBtn {
@@ -480,7 +481,7 @@
   }
 
   #donorCountGoal {
-    margin-left: 43px;
+    margin-left: 37px;
   }
 
   #donorLabel {
@@ -488,8 +489,8 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
-    margin-left: 45px;
-    margin-right: 50px;
+    margin-left: 49px;
+    margin-right: 59px;
     color: #828282;
   }
 
