--- a/mediaLargestComp.css
+++ b/mediaLargestComp.css
@@ -424,6 +424,7 @@
     width: 188px;
     height: 6px;
     margin-bottom: 10px;
+    margin-right: 12px;
   }
   #progressLabelTeam {
     font-size: 16px;
@@ -441,8 +442,8 @@
     margin-right: 58px;
   }
   #donorLabel2 {
-    margin-left: 33px;
-    margin-right: 47px;
+    margin-left: 38px;
+    margin-right: 52px;
   }
 
   #teamBtn {
@@ -490,7 +491,7 @@
   }
 
   #donorCountGoal {
-    margin-left: 43px;
+    margin-left: 37px;
   }
 
   #donorLabel {
@@ -498,8 +499,8 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
-    margin-left: 45px;
-    margin-right: 50px;
+    margin-left: 49px;
+    margin-right: 48px;
     color: #828282;
   }
 
