--- a/mediaMobile.css
+++ b/mediaMobile.css
@@ -52,6 +52,10 @@ section .content {
   height: 100%;
 }
 
+.nav-link:checked {
+  color: red;
+}
+
 /* If the screen size is less than*/
 @media screen and (max-width: 600px) and (min-width: 374px) {
   section:before {
@@ -466,6 +470,7 @@ section .content {
     width: 188px;
     height: 6px;
     margin-bottom: 10px;
+    margin-right: 12px;
   }
 
   #progressLabelTeam {
@@ -484,8 +489,8 @@ section .content {
     margin-right: 58px;
   }
   #donorLabel2 {
-    margin-left: 33px;
-    margin-right: 47px;
+    margin-left: 38px;
+    margin-right: 52px;
   }
 
   #teamBtn {
@@ -503,7 +508,7 @@ section .content {
   }
 
   #teamCard {
-    max-width: 350px;
+    min-width: 360px;
   }
 
   /*Donors Section================================================================================*/
