--- a/mediaSmallMobile.css
+++ b/mediaSmallMobile.css
@@ -412,6 +412,7 @@
     width: 145px;
     height: 6px;
     margin-bottom: 10px;
+    margin-right: 12px;
   }
 
   #progressLabelTeam {
@@ -430,8 +431,8 @@
     margin-right: 40px;
   }
   #donorLabel2 {
-    margin-left: 10px;
-    margin-right: 28px;
+    margin-left: 20px;
+    margin-right: 33px;
   }
 
   #teamBtn {
