--- a/mediaTablet.css
+++ b/mediaTablet.css
@@ -386,6 +386,7 @@
     width: 188px;
     height: 6px;
     margin-bottom: 10px;
+    margin-right: 12px;
   }
 
   #progressLabelTeam {
@@ -404,8 +405,8 @@
     margin-right: 58px;
   }
   #donorLabel2 {
-    margin-left: 33px;
-    margin-right: 47px;
+    margin-left: 38px;
+    margin-right: 52px;
   }
 
   #teamBtn {
@@ -453,7 +454,7 @@
   }
 
   #donorCountGoal {
-    margin-left: 43px;
+    margin-left: 41px;
   }
 
   #donorLabel {
@@ -461,8 +462,8 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
-    margin-left: 45px;
-    margin-right: 50px;
+    margin-left: 50px;
+    margin-right: 59px;
     color: #828282;
   }
 
